WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310062
AX: Missing null-check in AccessibilityRenderObject::boundingBoxRect
https://bugs.webkit.org/show_bug.cgi?id=310062
Summary
AX: Missing null-check in AccessibilityRenderObject::boundingBoxRect
Joshua Hoffman
Reported
2026-03-16 17:03:18 PDT
We're not null checking renderer after it is set to a different value
Attachments
Add attachment
proposed patch, testcase, etc.
Joshua Hoffman
Comment 1
2026-03-16 17:03:23 PDT
<
rdar://problem/172703088
>
Joshua Hoffman
Comment 2
2026-03-16 17:05:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60733
EWS
Comment 3
2026-03-16 22:56:41 PDT
Committed
309380@main
(e58d0a50ec35): <
https://commits.webkit.org/309380@main
> Reviewed commits have been landed. Closing PR #60733 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug