AX: Missing null-check in AccessibilityRenderObject::boundingBoxRect https://bugs.webkit.org/show_bug.cgi?id=310062 rdar://172703088

Reviewed by Abrar Rahman Protyasha.

We change renderer after it has been null-checked, but do not check it
again. This can cause a crash when we unconditionally dereference it
later.

* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::boundingBoxRect const):

Canonical link: https://commits.webkit.org/309380@main